# pytest-bdd-report

./: .gitignore  .html  LICENSE  MANIFEST.in  README.rst  RFTest.html  bdd_summary.json  json_util.py  jsonutil.py  log.html  output.xml  pyproject.toml  pytest_bdd_report.py  report.html  requirements.txt  setup.py  tox.ini
.github/workflows/: automated tests.yml  black.yml  publish python package.yml  pytest bdd.yml  ui BDD tests.yml  ui automated tests.yml  ui smoke BDD tests.yml  unit tests.yml
.scannerwork/: report-task.txt
collector/: scenario_aggregator.py  scenario_result_merger.py  step_details.py
generated_tests/: feature_1.feature  test_steps.py
src/pytest_bdd_report/: attach.py  extractor.py  interfaces.py  json_loader.py  loader.py  pytest_bdd_report.py  renderer.py  report.py  report_composer.py  report_file.py  report_file_generator.py  report_generator.py  report_renderer.py  screenshot.py  setup.py
summary/: summary.py
tests/: .html  test_attach.py  test_attach_screenshot.py
tests/bdd/: conftest.py  old_scenario_modal.py  test_failed_scenario_modal.py  test_failed_scenarios_modal.py  test_feature.py  test_feature_statistic_table.py  test_feature_table.py  test_file_list.py  test_filters.py  test_report_creation.py  test_return_to_top.py  test_scenario.py  test_scenario_modal.py  test_step.py  test_user_flow.py
tests/bdd_feature/: scenario_modal.feature
tests/bdd_tests/: conftest.py  test_scenario_modal.py
tests/bdd_utils/: scenario_utils.py
tests/test_components/: test_feature.py  test_scenario.py
tests/test_entities/: test_feature.py  test_scenario.py  test_step.py
tests/test_extensions/: test_attach_screenshot.py  test_encoder.py  test_screenshot.py
(+145 files in other folders)
