[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest_bdd_report"
version = "0.2.38"
authors = [
  { name="Mattia Monti", email="mattiamonti2001@gmail.com" },
]
description = "A pytest-bdd plugin for generating useful and informative BDD test reports"
readme = "README.rst"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.entry-points.pytest11]
bdd-report = "pytest_bdd_report.pytest_bdd_report"

[project.urls]
"Homepage" = "https://github.com/mattiamonti/pytest-bdd-report"
"Bug Tracker" = "https://github.com/mattiamonti/pytest-bdd-report/issues"
