[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest_bdd_report"
version = "1.2.2"
authors = [
  { name="Mattia Monti", email="mattiamonti2001@gmail.com" },
]
description = "A pytest-bdd plugin for generating useful and informative BDD test reports"
readme = "README.rst"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	'pytest >= 7.1.3',
	'pytest-bdd >= 5.0.0,<9.0.0',
	'Jinja2 >= 3.1.2',
]

[project.entry-points.pytest11]
bdd-report = "pytest_bdd_report.pytest_bdd_report"

[project.urls]
"Homepage" = "https://github.com/mattiamonti/pytest-bdd-report"
"Bug Tracker" = "https://github.com/mattiamonti/pytest-bdd-report/issues"
